--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/puridarmo.png" />
 
-  <title>Hotel Booking</title>
+  <title>Puri Darmo Serviced Residence</title>
 </head>
 
 <body>
